# opentelemetry-demo-tracing

./: .gitignore  LICENSE  README.md  collector-config.yaml  docker-compose.yaml
databases/employee/: Dockerfile  data.sql
databases/pay/: Dockerfile  data-setup.js
protos/: employee.proto  hello.proto
services/ach-processor/: Dockerfile  ach-processor.ts  index.ts  package-lock.json  package.json  routes.ts  tracing.ts  tsconfig.json
services/ach-processor/protos/: direct_deposit.proto  employee.proto  paycheck.proto
services/ach-processor/remote-services/protos/: employee.proto
services/client/: Dockerfile  client.js  package-lock.json  package.json
services/direct-deposit/: Cargo.toml  Dockerfile  README.md  build.rs
services/direct-deposit/src/: database.rs  error.rs  main.rs  service.rs  tracing.rs
services/employee/: Cargo.toml  Dockerfile  README.md  build.rs  server.rs
services/employee/protos/: employee.proto
services/employee/src/: database.rs  error.rs  main.rs  models.rs  schema.rs  service.rs  tracing.rs
services/paycheck/: .dockerignore  DependencyInjection.cs  Dockerfile  Program.cs  README.md  Startup.cs  paycheck.csproj  paycheck.sln
services/paycheck/Profiles/: PayProfile.cs
services/paycheck/Properties/: launchSettings.json
services/paycheck/Protos/: paycheck.proto
services/paycheck/Repositories/: PayRepository.cs
services/paycheck/Services/: IPayService.cs  PaycheckService.cs
services/paycheck/src/: DependencyInjection.cs  Program.cs  paycheck.csproj
services/paycheck/src/Entities/: BaseEntity.cs  Pay.cs
services/paycheck/src/Exceptions/: DatabaseConnectionException.cs  InvalidParameterException.cs  PaycheckNotFoundException.cs
services/paycheck/src/Profiles/: PayProfile.cs
services/paycheck/src/Protos/: paycheck.proto
services/paycheck/src/Repositories/: BaseRepository.cs  IRepository.cs  PayRepository.cs
services/paycheck/src/Services/: IPayService.cs  InternalPayService.cs  PaycheckService.cs
services/payroll/: Dockerfile  README.md  index.ts  model.ts  package-lock.json  package.json  routes.ts  service.ts  tracing.ts  tsconfig.json  utils.ts
services/payroll/middlewares/: error.middleware.ts  index.ts
services/payroll/remote-services/: employee-service.ts  index.ts  paycheck-service.ts  services.ts
services/payroll/remote-services/protos/: paycheck.proto
services/payroll/routes/: employees.ts  index.ts  paychecks.ts
services/payroll/src/: main.ts  package.json  tracing.ts  tsconfig.json  utils.ts
services/payroll/src/middlewares/: error.middleware.ts  not-found.middleware.ts
services/payroll/src/models/: index.ts
services/server/: Dockerfile  package-lock.json  package.json  server.js
(+8 files in other folders)
