[package]
name = "direct-deposit"
version = "0.1.0"
authors = ["drexler <andrew.quartey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
prost = "0.7.0"
tonic = {version="0.4.0",features = ["tls"]}
tokio = {version="1.5.0",features = ["net", "macros", "rt-multi-thread"]}
futures = "0.3"
opentelemetry-otlp = { version = "0.5.0", features =["tonic"]}
opentelemetry = { version = "0.12.0", features = ["tokio-support"]}
serde = {version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
thiserror = "1.0"
mongodb = "=2.0.0-alpha"

[build-dependencies]
tonic-build = "0.4.0"
