[package]
name = "employee"
version = "0.1.0"
authors = ["drexler <andrew.quartey@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "server.rs"

[dependencies]
prost = "0.7.0"
tonic = {version="0.4.0",features = ["tls"]}
tokio = {version="1.3.0",features = ["net", "macros", "rt-multi-thread"]}
futures = "0.3"

[build-dependencies]
tonic-build = "0.4.0"