[package]
name = "employee"
version = "0.1.0"
authors = ["drexler <andrew.quartey@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
prost = "0.7.0"
tonic = {version="0.4.0",features = ["tls"]}
tokio = {version="1.3.0",features = ["net", "macros", "rt-multi-thread"]}
futures = "0.3"
opentelemetry-otlp = { version = "0.5.0", features =["tonic"]}
opentelemetry = { version = "0.12.0", features = ["tokio-support"]}
opentelemetry-jaeger = { version = "0.11.0", features = ["collector_client", "tokio"]}
diesel = { version = "1.4.0", features = ["postgres", "uuidv07"] }
dotenv = "0.15.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
thiserror = "1.0"

[build-dependencies]
tonic-build = "0.4.0"